force-app/main/default/objects/ChangeRequest/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>계약</label>
    <type>Lookup</type>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>변경 요청</relationshipLabel>
    <relationshipName>ChangeRequests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>