force-app/main/default/objects/ChangeRequest/fields/Cost_Impact__c.field-meta.xml
<CustomField>
    <fullName>Cost_Impact__c</fullName>
    <label>비용 영향</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>