force-app/main/default/objects/ChangeRequest/fields/Customer_Approval_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_Requested_Date__c</fullName>
    <label>고객 수락 요청일</label>
    <type>Date</type>
</CustomField>