force-app/main/default/objects/ChangeRequest/fields/Customer_Approved__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approved__c</fullName>
    <label>고객 수락</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>