force-app/main/default/objects/ChangeRequest/fields/Customer_Reply_Channel__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reply_Channel__c</fullName>
    <label>회신 채널</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>이메일</fullName>
            </value>
            <value>
                <fullName>전화</fullName>
            </value>
            <value>
                <fullName>공문</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>