force-app/main/default/objects/ChangeRequest/fields/Customer_Reply_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reply_Date__c</fullName>
    <label>고객 회신일</label>
    <type>Date</type>
</CustomField>