force-app/main/default/objects/ChangeRequest/fields/Customer_Reply_Summary__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reply_Summary__c</fullName>
    <label>고객 회신 내용</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>