force-app/main/default/objects/ChangeRequest/fields/Drawing_URL__c.field-meta.xml
<CustomField>
    <fullName>Drawing_URL__c</fullName>
    <label>도면 링크</label>
    <type>Url</type>
</CustomField>