force-app/main/default/objects/ChangeRequest/fields/Followup_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Followup_Task_Created__c</fullName>
    <label>무응답 팔로업 처리 여부</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>