force-app/main/default/objects/ChangeRequest/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <label>보류 사유</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>