force-app/main/default/objects/ChangeRequest/fields/Info_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Info_Requested_Date__c</fullName>
    <label>추가정보 요청일</label>
    <type>Date</type>
</CustomField>