force-app/main/default/objects/ChangeRequest/fields/Internal_Approved__c.field-meta.xml
<CustomField>
    <fullName>Internal_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>내부 승인</label>
    <type>Checkbox</type>
</CustomField>