force-app/main/default/objects/ChangeRequest/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>요청 채널</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>현장구두</fullName>
            </value>
            <value>
                <fullName>이메일</fullName>
            </value>
            <value>
                <fullName>공문</fullName>
            </value>
            <value>
                <fullName>포털</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>