force-app/main/default/objects/ChangeRequest/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <label>접수일</label>
    <type>Date</type>
</CustomField>