force-app/main/default/objects/ChangeRequest/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>거부 사유</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>