force-app/main/default/objects/ChangeRequest/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>요청자</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>변경 요청</relationshipLabel>
    <relationshipName>ChangeRequests</relationshipName>
    <type>Lookup</type>
</CustomField>