force-app/main/default/objects/ChangeRequest/fields/Revision_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Revision_Approved_Date__c</fullName>
    <label>리비전 승인일</label>
    <type>Date</type>
</CustomField>