force-app/main/default/objects/ChangeRequest/fields/Revision_Approver__c.field-meta.xml
<CustomField>
    <fullName>Revision_Approver__c</fullName>
    <label>리비전 승인자</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>리비전 승인 변경 요청</relationshipLabel>
    <relationshipName>Revision_Approved_ChangeRequests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>