force-app/main/default/objects/ChangeRequest/fields/Revision_No__c.field-meta.xml
<CustomField>
    <fullName>Revision_No__c</fullName>
    <label>리비전 번호</label>
    <length>20</length>
    <type>Text</type>
</CustomField>