force-app/main/default/objects/ChangeRequest/fields/Schedule_Impact_Days__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Impact_Days__c</fullName>
    <label>일정 영향(일)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>