force-app/main/default/objects/ChangeRequest/fields/Scope_Type__c.field-meta.xml
<CustomField>
    <fullName>Scope_Type__c</fullName>
    <label>범위 구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>원계약 범위</fullName>
            </value>
            <value>
                <fullName>추가변경</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>