force-app/main/default/objects/ChangeRequest/fields/Technical_Impact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Impact__c</fullName>
    <label>기술 영향</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>