force-app/main/default/objects/ChangeRequest/validationRules/Internal_Approval_Required_On_Apply.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_Approval_Required_On_Apply</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;적용중&quot;),
    OR(
        NOT(Internal_Approved__c),
        AND(
            OR(Cost_Impact__c &gt; 0, Schedule_Impact_Days__c &gt; 0),
            NOT(Customer_Approved__c)
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>내부 승인이 완료되어야 하며, 비용·일정에 영향이 있는 건은 고객 수락까지 완료돼야 상태를 &apos;적용중&apos;으로 변경할 수 있습니다.</errorMessage>
</ValidationRule>