force-app/main/default/objects/ChangeRequest/validationRules/Revision_Fields_Required_On_Apply.validationRule-meta.xml
<ValidationRule>
    <fullName>Revision_Fields_Required_On_Apply</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;적용중&quot;),
    OR(
        ISBLANK(Revision_No__c),
        ISBLANK(Revision_Approver__c),
        ISBLANK(Revision_Approved_Date__c),
        ISBLANK(Drawing_URL__c)
    )
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>리비전 발행 정보(리비전번호·승인자·승인일·도면 링크)를 모두 입력해야 상태를 &apos;적용중&apos;으로 변경할 수 있습니다.</errorMessage>
</ValidationRule>