force-app/main/default/objects/ChangeRequest/listViews/CR_Change_Management_ChangeRequest.listView-meta.xml
<ListView>
    <fullName>CR_Change_Management_ChangeRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>CR 변경관리 담당자</label>
    <queue>CR_Change_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>