force-app/main/default/objects/ChangeRequest/listViews/On_Hold.listView-meta.xml
<ListView>
    <fullName>On_Hold</fullName>
    <filterScope>Everything</filterScope>
    <label>보류 중인 변경요청</label>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>보류</value>
    </filters>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Requester__c</columns>
    <columns>Hold_Reason__c</columns>
    <columns>Info_Requested_Date__c</columns>
</ListView>