force-app/main/default/objects/ChangeRequest/listViews/Pending_Customer_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Customer_Approval</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>고객승인대기</value>
    </filters>
    <label>고객 승인 대기 변경요청</label>
</ListView>